Changelog of flooding
===================================================


1.26 (unreleased)
-----------------

- Nothing changed yet.


1.25 (2012-10-17)
-----------------

Increase flooding-lib to 2.21:
Adds a view that returns a zipfile containing all the result files of a
given scenario, possibly first unzipped. The view checks whether the
user has approval permissions in at least one of the projects the
scenario belongs to.

Adds the view to the breach info page as a 'download' link for each
scenario listed.

Adds a 'check_scenario_permission' method to the permission manager.



1.24 (2012-10-16)
-----------------

- Configured flooding_lib.perform_task module.

- Removed sentry handler.

- Pinned lizard-worker 0.2.

- Removed flooding-worker.

- Increase flooding-lib to 2.20
Added tasks and perform_task.py.
Changed references flooding_worker to lizard_worker.


1.23 (2012-10-15)
-----------------

- Increase flooding-worker to 1.6
Modify calculate_scenario_statistics so that it also under Windows
(there were problems with deleting directories while the files in them
were still open).


1.22 (2012-10-15)
-----------------

- Increase flooding-worker to 1.5
Added task TASK_CALCULATE_STATISTICS.
Fixed error on model's combination in openbreach.py.


1.21 (2012-10-15)
-----------------

- Increased flooding-lib to 2.19. Changes:
Added an OpenStreetMap background for the max water depth
images. Synchronized panning and zooming, and checkboxes to turn them
on and off (in case there are many on one page and the user wants to
compare two).

Fix a bug with Excel metadata downloads. This was caused by new mixins
for all class based views, that set all kwargs on the view and always
add a permission manager. This meant that the kwargs weren't sent as
arguments anymore, resulting in an exception. It also meant that the
@receives_permission_manager decorators on class based views can be
removed.

- Configured task CALCULATE_SCENARIO_STATISTICS.


1.20 (2012-10-10)