@@ -29,8 +29,8 @@ eggs =
 [versions]
 flooding =
 flooding-base = 1.31
-flooding-lib = 2.21
-lizard-worker = 0.2
+flooding-lib = 2.22
+lizard-worker = 0.3
 buildout-versions = 1.5.0
 pb.recipes.pydev = 0.4.5
 pika = 0.9.5
