@@ -5,7 +5,13 @@ Changelog of flooding
 1.26 (unreleased)
 -----------------
 
-- Nothing changed yet.
+Increase flooding-lib to 2.22:
+Replaced the parameter 'scenario_id' with 'body' in perform_task function of
+'tasks.perform_task' module.
+
+Increase lizard-worker to 0.3:
+Replaced the parameter 'scenario_id' with 'body' in callback function of
+'action_task' module.
 
 
 1.25 (2012-10-17)
